# ros2-learning

./: beginner_cli_tools.txt  beginner_client_libraries.txt
catch_them_all/: project_info.txt
catch_them_all/.devcontainer/: devcontainer.json
catch_them_all/src/bringup/: package.xml
catch_them_all/src/bringup/config/: catch_them_all_config.yaml
catch_them_all/src/bringup/launch/: turtlesim_catch_them_all_launch.xml
catch_them_all/src/catch_them_all/: CMakeLists.txt  package.xml
catch_them_all/src/catch_them_all/catch_them_all/: turtle_controller.py  turtle_spawner.py
catch_them_all/src/interfaces/: CMakeLists.txt  package.xml
catch_them_all/src/interfaces/srv/: CatchTurtle.srv
cpp_publisher_subscriber/: stop.sh
cpp_publisher_subscriber/.devcontainer/: devcontainer.json
cpp_publisher_subscriber/src/cpp_publisher_subscriber/: CMakeLists.txt  package.xml
cpp_publisher_subscriber/src/cpp_publisher_subscriber/src/: publisher_member_function.cpp
custom_msg_srv/src/custom_msg_srv/: CMakeLists.txt  package.xml
custom_msg_srv/src/test_custom_interfaces/: CMakeLists.txt  package.xml
custom_msg_srv/src/test_custom_interfaces/src/: client_lambda.cpp  publisher_member_function.cpp  service_lambda.cpp  subscriber_member_function.cpp
custom_msg_srv/src/test_custom_interfaces/test_custom_interfaces/: client_member_function.py  publisher_member_function.py  service_member_function.py  subscriber_member_function.py
my_first_urdf/: my_robot.urdf
my_first_urdf/.devcontainer/: Dockerfile
my_first_urdf/src/my_robot_description/: package.xml
my_first_urdf/src/my_robot_description/launch/: display.launch.py  display.launch.xml
my_first_urdf/src/my_robot_description/rviz/: config_file.rviz
my_first_urdf/src/my_robot_description/urdf/: my_robot.urdf.xacro
notes/: beginner_client_libraries.txt  broadcast_tfs_with_the_robot_state_publisher.txt  improve_urdf_with_xacro.txt  tf_overview.txt  unit_tests.txt  urdf_for_a_robot.txt
parameters/src/params/: CMakeLists.txt  package.xml
parameters/src/params/params/: pub_with_params.py
parameters/src/params/src/: pub_with_params.cpp
parameters/src/pkg/: package.xml
py_publisher_subscriber/: stop.sh
py_publisher_subscriber/.devcontainer/: devcontainer.json
py_publisher_subscriber/src/py_publisher_subscriber/: package.xml  setup.py
py_publisher_subscriber/src/py_publisher_subscriber/py_publisher_subscriber/: subscriber_member_function.py
py_publisher_subscriber/src/py_publisher_subscriber/scripts/: minimal_pub_sub_launch.sh
ros2_ws/: README.md  stop.sh
ros2_ws/.devcontainer/: Dockerfile  devcontainer.json
ros2_ws/src/bringup/: CMakeLists.txt  package.xml
ros2_ws/src/bringup/config/: template_config.yaml
ros2_ws/src/interfaces/: CMakeLists.txt
ros2_ws/src/pkg/: CMakeLists.txt  package.xml
ros2_ws/src/pkg/pkg/: template_node_py.py
ros2_ws/src/pkg/src/: template_node_cpp.cpp
ros2_ws_backup/.devcontainer/: Dockerfile  devcontainer.json
ros2_ws_backup/src/bringup/launch/: template_launch.py  template_launch.xml
ros2_ws_backup/src/interfaces/msg/: Template.msg
ros2_ws_backup/src/pkg/: CMakeLists.txt  package.xml
ros2_ws_backup/src/pkg/pkg/: template_node_py.py
ros2_ws_backup/src/pkg/src/: template_node_cpp.cpp
service_client/.devcontainer/: devcontainer.json
service_client/src/pkg/: CMakeLists.txt
service_client/src/srv_cli/: CMakeLists.txt  package.xml
service_client/src/srv_cli/src/: client_lambda_1.cpp  client_lambda_2.cpp  service_lambda.cpp
service_client/src/srv_cli/srv_cli/: client_member_function_1.py  client_member_function_2.py  service_member_function.py
unit_tests/: README.md  start.sh
unit_tests/.devcontainer/: devcontainer.json
unit_tests/src/unit_tests/: CMakeLists.txt  package.xml
unit_tests/src/unit_tests/src/: publisher_member_function.cpp  subscriber_member_function.cpp
unit_tests/src/unit_tests/test/gtest/: test_publisher.cpp
unit_tests/src/unit_tests/test/pytest/: test_publisher.py
unit_tests/src/unit_tests/unit_tests/: publisher_member_function.py
